@@ -1,5 +1,15 @@
 2012-09-02  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
+	Redefine paragraph_key with project global scope.
+
+	* src/pkgkeys.h (paragraph_key): Declare it.
+	* src/pkgkeys.c (paragraph_key): Define it.
+
+	* src/pkgshow.cpp (pkgDirectoryViewer::EmitDescription): Delete
+	function local definition; use global definition instead.
+
+2012-09-02  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
 	Correct defect introduced by 2012-08-03 commit.
 
 	* src/approot.c (AppPathNameW): Add omitted 'else', so that tail
